plugins {
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'java'
	id("java-test-fixtures")
	id 'checkstyle'
	id 'pmd'
}

ext {
	immutablesVersion = "2.12.2"
}

group = 'org.bk.graphql'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-graphql'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation("org.springframework.boot:spring-boot-starter-websocket")
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.graphql:spring-graphql-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jdbc-test'
	testImplementation("org.springframework.boot:spring-boot-testcontainers")
	testImplementation('org.testcontainers:testcontainers-postgresql')
	testImplementation('org.testcontainers:testcontainers')
	testImplementation('org.testcontainers:testcontainers-junit-jupiter')
	implementation("org.postgresql:postgresql")
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.flywaydb:flyway-database-postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'

	annotationProcessor "org.immutables:value:$immutablesVersion"
	compileOnly "org.immutables:value-annotations:$immutablesVersion"
}

tasks.named('test') {
	useJUnitPlatform()
}

checkstyle {
	configFile = file('config/checkstyle/checkstyle.xml')
	ignoreFailures = false
}

pmd {
	consoleOutput = true
	ignoreFailures = false
	ruleSets = ['category/java/errorprone.xml', 'category/java/bestpractices.xml']
}

tasks.withType(Checkstyle).configureEach {
	reports {
		xml.required = true
		html.required = true
	}
}

tasks.withType(Pmd).configureEach {
	reports {
		xml.required = true
		html.required = true
	}
}

tasks.named('checkstyleTest') {
	enabled = false
}

tasks.named('checkstyleTestFixtures') {
	enabled = false
}

tasks.named('pmdTest') {
	enabled = false
}

tasks.named('pmdTestFixtures') {
	enabled = false
}
